# CodeAI

./: .gitignore  README.md
demos/2026-02-18/claude/: CLAUDE.md  prompt2.txt  pyproject.toml  scraper.py
demos/2026-02-18/cursor/: pyproject.toml
demos/2026-02-18/cursor/demo1/: prompt1.txt  prompt2.txt  prompt3.txt  scraper.py  scraper2.py
demos/2026-02-18/cursor/demo2/: app.py  config.py  models.py  prompt1.txt  requirements.txt  schemas.py
demos/2026-02-18/cursor/demo2/templates/: 404.html  base.html  index.html  user.html  users.html
demos/2026-02-18/windsurf/: README.md  pyproject.toml  pytest.ini
demos/2026-02-18/windsurf/demo1/: app.py  main.py  prompt1.txt
demos/2026-02-18/windsurf/demo1/static/css/: style.css
demos/2026-02-18/windsurf/demo1/static/js/: dashboard.js
demos/2026-02-18/windsurf/demo1/templates/: dashboard.html  index.html
demos/2026-02-18/windsurf/demo1/utils/: data_processor.py
demos/2026-02-18/windsurf/demo2/: api_client.py
demos/2026-02-18/windsurf/demo2/tests/: test_api_client.py
demos/2026-05-27/claude/: CLAUDE.md  Notification_System_Architecture.docx  app.py  prompt1.txt  prompt2.1.txt  prompt2.txt  prompt3.txt  prompt4.1.txt  prompt4.txt  pyproject.toml  scraper_new.py
demos/2026-05-27/claude/auth/: jwt_handler.py
demos/2026-05-27/windsurf/: app.py  prompt1.txt  prompt2.txt  requirements.txt  sample.csv
demos/2026-05-27/windsurf/templates/: dashboard.html  index.html
demos/2026-05-27/windsurf/tests/: conftest.py  test_app.py  test_data_processor.py
demos/2026-05-27/windsurf/utils/: data_processor.py
(+2 files in other folders)
